--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,31 +3,31 @@
 server:
   port: 7070
 
-# Context path of the application
+  # Context path of the application
   servlet:
     context-path: /api
 
-# Default HTTP session time out
+    # Default HTTP session time out
     session:
       timeout: 15m
 
 spring:
-#  data:
-#    rest:
-#      default-media-type: application/json
-#  hateoas:
-#    use-hal-as-default-json-media-type: false
-#============JDBC============
+  #  data:
+  #    rest:
+  #      default-media-type: application/json
+  #  hateoas:
+  #    use-hal-as-default-json-media-type: false
+  #============JDBC============
   datasource:
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
 
-#============JPA============
+  #============JPA============
   jpa:
     hibernate:
-#      ddl-auto: create-drop
+      #      ddl-auto: create-drop
       dialect: org.hibernate.dialect.MySQL57Dialect
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
@@ -35,7 +35,7 @@ spring:
           lob:
             non_contextual_creation: true
 
-#============SECURITY============
+  #============SECURITY============
   security:
     user:
       name: rik
