--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 
 script:
   - mvn clean install sonar:sonar -Pcoverage -Dsonar.projectKey=com.api:mykoipond
-  - docker build -t docker.io/$DOCKER_USERNAME/mykoipond:latest
+  - docker build -t docker.io/$DOCKER_USERNAME/mykoipond:latest .
 
 cache:
   directories:
