--- a/ui/package.json
+++ b/ui/package.json
@@ -52,17 +52,21 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "@vue/cli-plugin-babel": "^4.1.2",
     "@vue/cli-plugin-router": "^4.1.2",
     "@vue/cli-plugin-unit-jest": "~4.4.0",
     "@vue/cli-plugin-vuex": "^4.1.2",
     "@vue/cli-service": "^4.1.2",
     "@vue/test-utils": "^1.0.3",
+    "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0"
   },
   "postcss": {
     "plugins": {
