--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit --watch"
+    "test:unit": "vue-cli-service test:unit --watch",
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "@casl/ability": "^4.0.8",
@@ -62,6 +63,7 @@
     "@vue/test-utils": "^1.0.3",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
+    "cypress": "^4.8.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue-loader": "^15.8.3",
